#590 Restructured the `suborder-form.html` layout into a `col-md` grid system for better responsiveness and consistency.
- Replaced redundant `th:replace` elements with cleaned-up input/checkbox structures for improved maintainability.
- Refactored `invoice` field to use `Boolean` instead of `String` for better type safety and validation.
- Simplified `SuborderController` logic by removing outdated validation and improving default value setting for `invoice`.
- Enhanced overall readability and modernized the template for improved user experience.